--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "child_process": "^1.0.2",
+    "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "http-proxy-middleware": "^3.0.3",
+    "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -44,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^16.0.1",
+    "jest": "^27.5.1"
   }
 }
