--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "http-proxy-middleware": "^3.0.3",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
