--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
     "child_process": "^1.0.2",
     "express": "^4.21.1",
+    "font-awesome": "^4.7.0",
     "fs": "^0.0.1-security",
+    "geolib": "^3.3.4",
     "http-proxy-middleware": "^3.0.3",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.0.0",
@@ -54,6 +57,9 @@
   },
   "devDependencies": {
     "@testing-library/react": "^16.0.1",
-    "jest": "^27.5.1"
+    "autoprefixer": "^10.4.20",
+    "jest": "^27.5.1",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15"
   }
 }
