--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.8",
+    "babel-preset-react-app": "^10.0.1",
     "bootstrap": "^5.3.3",
     "child_process": "^1.0.2",
     "express": "^4.21.1",
@@ -53,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@testing-library/react": "^16.0.1",
     "jest": "^27.5.1"
   }
